--- a/src/app/modules/users/users-list/users-list.component.html
+++ b/src/app/modules/users/users-list/users-list.component.html
@@ -35,7 +35,9 @@
         <ng-container matColumnDef="status">
           <th mat-header-cell *matHeaderCellDef>Status</th>
           <td mat-cell *matCellDef="let element">
-            {{ element.status }}
+            <div class="badge" [ngClass]="element.status ? 'success' : 'danger'">
+              {{ element.status ? 'Activo' : 'Inactivo' }}
+            </div>
           </td>
         </ng-container>
         <ng-container matColumnDef="joinedDate">
