--- a/src/app/modules/users/users-list/users-list.component.scss
+++ b/src/app/modules/users/users-list/users-list.component.scss
@@ -8,3 +8,22 @@
 .table {
   width: 100%;
 }
+
+.badge {
+  display: inline-block;
+  padding: 0.1rem 0.85rem;
+  font-size: 0.8rem;
+  text-align: center;
+  white-space: nowrap;
+  border-radius: 0.475rem;
+
+  &.success {
+    color: #50cd89;
+    background-color: #e8fff3;
+  }
+
+  &.danger {
+    color: #f1416c;
+    background-color: #fff5f8;
+  }
+}
