--- a/src/app/modules/users/users-list/users-list.component.html
+++ b/src/app/modules/users/users-list/users-list.component.html
@@ -3,37 +3,37 @@
     <div class="table-responsive">
       <table mat-table [dataSource]="(dataSource | async)?.data" class="table">
         <ng-container matColumnDef="firstName">
-          <th mat-header-cell *matHeaderCellDef>First name</th>
+          <th mat-header-cell *matHeaderCellDef>Primer Apellido</th>
           <td mat-cell *matCellDef="let element">
             {{ element.lastName }}
           </td>
         </ng-container>
         <ng-container matColumnDef="lastName">
-          <th mat-header-cell *matHeaderCellDef>Last name</th>
+          <th mat-header-cell *matHeaderCellDef>Segundo Apellido</th>
           <td mat-cell *matCellDef="let element">
             {{ element.secondLastName }}
           </td>
         </ng-container>
         <ng-container matColumnDef="name">
-          <th mat-header-cell *matHeaderCellDef>Name</th>
+          <th mat-header-cell *matHeaderCellDef>Nombre</th>
           <td mat-cell *matCellDef="let element">
             {{ element.name }}
           </td>
         </ng-container>
         <ng-container matColumnDef="email">
-          <th mat-header-cell *matHeaderCellDef>Email</th>
+          <th mat-header-cell *matHeaderCellDef>Correo</th>
           <td mat-cell *matCellDef="let element">
             {{ element.email }}
           </td>
         </ng-container>
         <ng-container matColumnDef="role">
-          <th mat-header-cell *matHeaderCellDef>Role</th>
+          <th mat-header-cell *matHeaderCellDef>Rol</th>
           <td mat-cell *matCellDef="let element">
             {{ element.role.name }}
           </td>
         </ng-container>
         <ng-container matColumnDef="status">
-          <th mat-header-cell *matHeaderCellDef>Status</th>
+          <th mat-header-cell *matHeaderCellDef>Estatus</th>
           <td mat-cell *matCellDef="let element">
             <div class="badge" [ngClass]="element.status ? 'success' : 'danger'">
               {{ element.status ? 'Activo' : 'Inactivo' }}
@@ -41,15 +41,30 @@
           </td>
         </ng-container>
         <ng-container matColumnDef="joinedDate">
-          <th mat-header-cell *matHeaderCellDef>Joined date</th>
+          <th mat-header-cell *matHeaderCellDef>Ingreso</th>
           <td mat-cell *matCellDef="let element">
             {{ element.dateCreated | date }}
+          </td>
+        </ng-container>
+        <ng-container matColumnDef="actions">
+          <th class="text-right" mat-header-cell *matHeaderCellDef>Acciones</th>
+          <td class="text-right" mat-cell *matCellDef="let element">
+            <button class="btn-action" mat-icon-button aria-label="Edit">
+              <mat-icon>edit</mat-icon>
+            </button>
+            <button class="btn-action" mat-icon-button aria-label="Delete">
+              <mat-icon>delete</mat-icon>
+            </button>
           </td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
       </table>
+      <mat-paginator
+        [length]="10"
+        [pageSize]="10"
+        aria-label="Select page of GitHub search results"></mat-paginator>
     </div>
   </mat-card-content>
 </mat-card>
