--- a/src/app/modules/users/users-list/users-list.component.html
+++ b/src/app/modules/users/users-list/users-list.component.html
@@ -1,3 +1,20 @@
+<div class="d-flex align-items-center justify-content-between header">
+  <h1>Usuarios</h1>
+  <div class="table-actions">
+    <button mat-flat-button color="warn">
+      <mat-icon fontSet="material-icons-outlined">filter_alt</mat-icon>
+      Filtros
+    </button>
+    <button mat-flat-button color="warn">
+      <mat-icon fontSet="material-icons-outlined">file_upload</mat-icon>
+      Carga masiva
+    </button>
+    <button mat-flat-button color="warn">
+      <mat-icon fontSet="material-icons-outlined">add</mat-icon>
+      Agregar usuario
+    </button>
+  </div>
+</div>
 <mat-card>
   <mat-card-content>
     <div class="table-responsive">
