--- a/src/styles.scss
+++ b/src/styles.scss
@@ -81,10 +81,14 @@ th.mat-header-cell {
   color: var(--gray-light-text);
   font-weight: 600;
   text-transform: uppercase;
+  line-height: 1.5715;
+  padding: 1rem !important;
 }
 
-td.mat-cell {
+tr.mat-row td.mat-cell {
   color: var(--gray-text);
+  line-height: 1.5715;
+  padding: 1rem;
 }
 
 .mat-icon-button.btn-action {
