modify hover buttons

--- a/src/app/modules/users/users-list/users-list.component.html
+++ b/src/app/modules/users/users-list/users-list.component.html
@@ -3,11 +3,11 @@
     <div class="d-flex align-items-center justify-content-between header">
       <h1>Usuarios</h1>
       <div class="table-actions">
-        <button mat-flat-button class="btn-light-primary">
+        <button mat-flat-button color="warn" class="btn-light-primary">
           <mat-icon fontSet="material-icons-outlined">filter_alt</mat-icon>
           Filtros
         </button>
-        <button mat-flat-button class="btn-light-primary">
+        <button mat-flat-button color="warn" class="btn-light-primary">
           <mat-icon fontSet="material-icons-outlined">file_upload</mat-icon>
           Carga masiva
         </button>
