--- a/src/app/modules/users/users-list/users-list.component.scss
+++ b/src/app/modules/users/users-list/users-list.component.scss
@@ -49,10 +49,21 @@
     padding: 0.2rem 1.35rem;
     font-weight: bold;
     overflow: hidden;
+    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
+      border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+
+    .mat-icon {
+      margin-bottom: 2px;
+    }
   }
 
   .btn-light-primary {
     background: rgba(#f44336, 0.1);
     color: #f44336;
+
+    &:hover {
+      background: var(--red);
+      color: #fff;
+    }
   }
 }
