create section component

--- a/src/app/modules/users/users-list/users-list.component.html
+++ b/src/app/modules/users/users-list/users-list.component.html
@@ -1,4 +1,4 @@
-<mat-card>
+<!-- <mat-card>
   <mat-card-content>
     <div class="d-flex align-items-center justify-content-between header">
       <h1>Usuarios</h1>
@@ -75,4 +75,9 @@
         aria-label="Select page of GitHub search results"></mat-paginator>
     </div>
   </mat-card-content>
-</mat-card>
+</mat-card> -->
+<app-section>
+  <div class="custom">
+    <button>Boton de afuera</button>
+  </div>
+</app-section>
