delete user service

--- a/src/app/modules/users/users-list/users-list.component.html
+++ b/src/app/modules/users/users-list/users-list.component.html
@@ -77,7 +77,7 @@
   </mat-card-content>
 </mat-card> -->
 <app-section>
-  <div class="custom">
+  <ng-container #actions class="custom">
     <button>Boton de afuera</button>
-  </div>
+  </ng-container>
 </app-section>
