--- a/src/app/shared/components/ui/section/section.component.html
+++ b/src/app/shared/components/ui/section/section.component.html
@@ -1,16 +1,16 @@
 <mat-card>
-  <mat-card-header>
-    <mat-card-title>
-      <div>
-        <h1>Titulo de la sección</h1>
-        <div class="actions" *ngIf="!customActions">
-          <button>Default</button>
-        </div>
-        <ng-template #actions *ngIf="customActions"></ng-template>
-      </div>
-    </mat-card-title>
-  </mat-card-header>
+  <div class="d-flex align-items-center justify-content-between section-header">
+    <h1>{{ title }}</h1>
+    <div class="section-header-actions">
+      <ng-container [ngTemplateOutlet]="headerActions ? headerActions : defaultHeaderActions">
+      </ng-container>
+    </div>
+  </div>
   <mat-card-content>
     <ng-content></ng-content>
   </mat-card-content>
 </mat-card>
+
+<ng-template #defaultHeaderActions>
+  <app-button text="Agregar usuarios"></app-button>
+</ng-template>
