--- a/src/app/shared/components/grid/grid.component.html
+++ b/src/app/shared/components/grid/grid.component.html
@@ -4,7 +4,7 @@
       <th mat-header-cell *matHeaderCellDef>{{ column.name }}</th>
       <ng-container *ngIf="column.slug !== 'acciones'; else gridActions">
         <td mat-cell *matCellDef="let element">
-          {{ element[column.key] }}
+          {{ element | flatObject: column.key }}
         </td>
       </ng-container>
       <ng-template #gridActions>
