--- a/src/app/shared/components/ui/section/section.component.html
+++ b/src/app/shared/components/ui/section/section.component.html
@@ -1,4 +1,4 @@
-<mat-card>
+<mat-card class="section">
   <div class="d-flex align-items-center justify-content-between section-header">
     <h1>{{ title }}</h1>
     <div class="section-header-actions">
