--- a/src/app/modules/users/users-list/users-list.component.html
+++ b/src/app/modules/users/users-list/users-list.component.html
@@ -1,5 +1,49 @@
 <app-section title="Usuarios" [headerActions]="headerActions">
-  <app-grid [data]="data" [columns]="columns"></app-grid>
+  <div class="grid-responsive">
+    <table class="grid" mat-table [dataSource]="dataSource">
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef>Nombre</th>
+        <td mat-cell *matCellDef="let element">
+          <span class="name"
+            >{{ element.secondLastName }} {{ element.lastName }} {{ element.name }}</span
+          >
+          <span>{{ element.email }}</span>
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="rol">
+        <th mat-header-cell *matHeaderCellDef>Rol</th>
+        <td mat-cell *matCellDef="let element">{{ element.role.name }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="status">
+        <th mat-header-cell *matHeaderCellDef>Estatus</th>
+        <td mat-cell *matCellDef="let element">{{ element.status }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="joinedDate">
+        <th mat-header-cell *matHeaderCellDef>Fecha ingreso</th>
+        <td mat-cell *matCellDef="let element">{{ element.dateCreated | date }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="actions">
+        <th mat-header-cell *matHeaderCellDef class="text-right" style="width: 10%">Acciones</th>
+        <td mat-cell *matCellDef="let element">
+          <div class="text-right grid-actions">
+            <button class="btn-action" mat-icon-button aria-label="Edit">
+              <mat-icon>edit</mat-icon>
+            </button>
+            <button class="btn-action" mat-icon-button aria-label="Delete">
+              <mat-icon>delete</mat-icon>
+            </button>
+          </div>
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    </table>
+  </div>
 </app-section>
 <ng-template #headerActions>
   <app-button mode="light" text="Filtros" icon="filter_alt"></app-button>
