--- a/src/app/modules/users/users-list/users-list.component.html
+++ b/src/app/modules/users/users-list/users-list.component.html
@@ -4,11 +4,15 @@
       <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef>Nombre</th>
         <td mat-cell *matCellDef="let element">
-          <span class="name"
-            >{{ element.secondLastName }} {{ element.lastName }} {{ element.name }}</span
-          >
-          <span>{{ element.email }}</span>
+          <span class="name">
+            {{ element.secondLastName }} {{ element.lastName }} {{ element.name }}
+          </span>
         </td>
+      </ng-container>
+
+      <ng-container matColumnDef="email">
+        <th mat-header-cell *matHeaderCellDef>Email</th>
+        <td mat-cell *matCellDef="let element">{{ element.email }}</td>
       </ng-container>
 
       <ng-container matColumnDef="rol">
@@ -18,7 +22,7 @@
 
       <ng-container matColumnDef="status">
         <th mat-header-cell *matHeaderCellDef>Estatus</th>
-        <td mat-cell *matCellDef="let element">{{ element.status }}</td>
+        <td mat-cell *matCellDef="let element"><app-badge [value]="element.status"></app-badge></td>
       </ng-container>
 
       <ng-container matColumnDef="joinedDate">
