add table component to user list

--- a/src/app/shared/components/ui/section/section.component.html
+++ b/src/app/shared/components/ui/section/section.component.html
@@ -1,6 +1,6 @@
 <mat-card class="section">
   <div class="d-flex align-items-center justify-content-between section-header">
-    <h1>{{ title }}</h1>
+    <h1>{{ sectionTitle }}</h1>
     <div class="section-header-actions">
       <ng-container [ngTemplateOutlet]="headerActions ? headerActions : defaultHeaderActions">
       </ng-container>
