--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="d-flex align-items-center justify-content-center login">
   <mat-card>
     <h1 class="login-title">Iniciar sesión en <span>Travel Portal</span></h1>
-    <img src="../../../../assets/img/airplane.svg" alt="Airplane" class="login-img" />
+    <img src="./assets/img/airplane.svg" alt="Airplane" class="login-img" />
     <form [formGroup]="form" (ngSubmit)="handleSubmit()" autocomplete="off" novalidate>
       <p class="login-label-session">Utiliza tus credenciales de acceso</p>
       <div>
