--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,7 +1,7 @@
 @import 'mq';
 
 .login {
-  background: url('../../../assets/img/bg-1.jpeg') no-repeat center / cover fixed;
+  background: url('../../assets/img/bg-1.jpeg') no-repeat center / cover fixed;
   width: 100vw;
   height: 100vh;
 
