create input-error component

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,1 +1,11 @@
-<p>login works!</p>
+<form>
+  <div>
+    <label for="email">Email</label>
+    <input type="email" id="email">
+  </div>
+  <div>
+    <label for="psswd">Password</label>
+    <input type="password" id="psswd">
+  </div>
+  <button>Log in</button>
+</form>
