--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,11 +1,12 @@
-<form>
+<form [formGroup]="form">
   <div>
     <label for="email">Email</label>
     <input type="email" id="email">
+    <app-input-error field="email"></app-input-error>
   </div>
   <div>
     <label for="psswd">Password</label>
     <input type="password" id="psswd">
   </div>
-  <button>Log in</button>
+  <button type="submit">Log in</button>
 </form>
