add auth background

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,38 +1,69 @@
-<div class="auth">
-  <svg class="auth-bg-circles" viewBox="0 0 960 540" width="100%" height="100%" preserveAspectRatio="xMidYMax slice" xmlns="http://www.w3.org/2000/svg">
-    <g fill="none" stroke="currentColor" stroke-width="100" class="text-gray-700 opacity-25 ng-tns-c185-1">
-      <circle r="234" cx="196" cy="491" class="ng-tns-c185-1"></circle>
-      <circle r="234" cx="790" cy="23" class="ng-tns-c185-2"></circle>
+<div class="center auth">
+  <svg
+    class="bg-circles"
+    viewBox="0 0 960 540"
+    width="100%"
+    height="100%"
+    preserveAspectRatio="xMidYMax slice"
+    xmlns="http://www.w3.org/2000/svg"
+  >
+    <g fill="none" stroke="currentColor" stroke-width="100">
+      <circle r="234" cx="196" cy="491"></circle>
+      <circle r="234" cx="790" cy="23"></circle>
     </g>
   </svg>
-  <svg class="auth-bg-pattern" viewBox="0 0 220 192" width="220" height="192" fill="none">
+  <svg
+    class="bg-pattern"
+    viewBox="0 0 220 192"
+    width="220"
+    height="192"
+    fill="none"
+  >
     <defs>
-      <pattern id="837c3e70-6c3a-44e6-8854-cc48c737b659" x="0" y="0" width="20" height="20" patternUnits="userSpaceOnUse" class="ng-tns-c185-4">
-        <rect x="0" y="0" width="4" height="4" fill="currentColor" class="ng-tns-c185-3"></rect>
+      <pattern
+        id="837c3e70-6c3a-44e6-8854-cc48c737b659"
+        x="0"
+        y="0"
+        width="20"
+        height="20"
+        patternUnits="userSpaceOnUse"
+      >
+        <rect x="0" y="0" width="4" height="4" fill="currentColor"></rect>
       </pattern>
     </defs>
-    <rect width="220" height="192" fill="url(#837c3e70-6c3a-44e6-8854-cc48c737b659)"></rect>
+    <rect
+      width="220"
+      height="192"
+      fill="url(#837c3e70-6c3a-44e6-8854-cc48c737b659)"
+    ></rect>
   </svg>
-  <div>
+  <div class="auth-container">
     <div class="center auth-title">
-      <img src="../../../assets/img/angular-logo.png" alt="Angular utilities" width="70">
+      <img
+        src="../../../assets/img/angular-logo.png"
+        alt="Angular utilities"
+        width="70"
+      />
       <h1>Utilidades</h1>
     </div>
     <div class="auth-form">
       <h1>Utilidades de Angular</h1>
       <h2>Hola, bienvenido de nuevo</h2>
-      <p>Usa el correo <b>admin@utils.com</b> y la contraseña <b>root</b> para continuar.</p>
+      <p>
+        Usa el correo <b>admin@utils.com</b> y la contraseña <b>root</b> para
+        continuar.
+      </p>
       <form>
         <div>
           <label for="email">Correo electrónico</label>
-          <input type="email" id="email">
+          <input type="email" id="email" />
         </div>
         <div>
           <label for="pswd">Contraseña</label>
-          <input type="password" id="pswd">
+          <input type="password" id="pswd" />
         </div>
         <div>
-          <input type="checkbox" id="remember-me">
+          <input type="checkbox" id="remember-me" />
           <label for="remember-me">Recordar</label>
         </div>
         <span>¿Olvidaste tu contraseña?</span>
