--- a/src/app/auth/login/login.component.scss
+++ b/src/app/auth/login/login.component.scss
@@ -1,42 +1,42 @@
 .auth {
-  display: flex;
-  align-items: center;
-  justify-content: center;
   height: 100vh;
   width: 100vw;
   background: rgb(30, 41, 59);
   position: relative;
-}
 
-.auth-title {
-  margin-bottom: 2rem;
-  
-  h1 {
-    color: #fff;
-  font-weight: bold;
-  font-size: 2rem;
-  margin-left: 1rem;
-  }
-}
-
-.auth-bg-circles {
-  position: absolute;
-  height: 100vh;
-  width: 100vw;
+  .bg-circles {
+    position: absolute;
+    height: 100vh;
+    width: 100vw;
     color: rgb(51, 65, 85);
     opacity: .25;
   }
-
-.auth-bg-pattern {
+  
+  .bg-pattern {
     position: absolute;
     color: rgb(51, 65, 85);
     top: 0;
     left: 0;
   }
 
+  &-container {
+    position: relative;
+  }
+}
+
+.auth-title {
+  margin-bottom: 1.5rem;
+  
+  h1 {
+    color: #fff;
+    font-weight: bold;
+    font-size: 2rem;
+    margin-left: 1rem;
+  }
+}
+
 .auth-form {
   background-color: #fff;
   min-width: 420px;
   padding: 30px;
-  position: relative;
 }
