--- a/src/app/auth/login/login.component.scss
+++ b/src/app/auth/login/login.component.scss
@@ -1,20 +1,24 @@
+@import 'vars';
+
 .auth {
   height: 100vh;
   width: 100vw;
-  background: rgb(30, 41, 59);
+  background: $gray-800;
   position: relative;
 
-  .bg-circles {
+  .bg-circles,
+  .bg-pattern  {
     position: absolute;
+    color: $gray-700;
+  }
+
+  .bg-circles {
     height: 100vh;
     width: 100vw;
-    color: rgb(51, 65, 85);
     opacity: .25;
   }
   
   .bg-pattern {
-    position: absolute;
-    color: rgb(51, 65, 85);
     top: 0;
     left: 0;
   }
