--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -47,21 +47,21 @@
       <h1>Utilidades</h1>
     </div>
     <div class="auth-form">
-      <h2>Hola, bienvenido de nuevo</h2>
+      <h2 class="text-center">Hola, bienvenido de nuevo</h2>
       <p>
         Usa el correo <b>admin@utils.com</b> y la contraseña <b>root</b> para
         continuar.
       </p>
       <form>
-        <div>
+        <div class="form-group">
           <label for="email">Correo electrónico</label>
           <input type="email" id="email" />
         </div>
-        <div>
+        <div class="form-group">
           <label for="pswd">Contraseña</label>
           <input type="password" id="pswd" />
         </div>
-        <div>
+        <div class="form-group">
           <input type="checkbox" id="remember-me" />
           <label for="remember-me">Recordar</label>
         </div>
