--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,9 @@
-/* You can add global styles to this file, and also import other style files */
+* {
+  box-sizing: border-box;
+}
 
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 0; font-family: Poppins, Helvetica, "sans-serif"; }
 
 h1, h2, h3, h4, h5, h6 {
   margin: 0;
@@ -11,4 +13,34 @@ h1, h2, h3, h4, h5, h6 {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.form-group {
+  margin-bottom: 1rem;
+
+  label {
+    display: inline-block;
+    margin-bottom: .3rem;
+    font-weight: 600;
+  }
+
+  input {
+    display: block;
+    width: 100%;
+    padding: 0.825rem 1.3rem;
+    border: 1px solid #ccc;
+    border-radius: 0.425rem;
+    box-sizing: border-box;
+    font-weight: 500;
+    font-size: 1rem;
+
+    &:active,
+    &:focus {
+      outline: none;
+    }
+  }
 }
