--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -54,19 +54,21 @@
       </p>
       <form>
         <div class="form-group">
-          <label for="email">Correo electrónico</label>
+          <label for="email" class="required">Correo electrónico</label>
           <input type="email" id="email" />
         </div>
         <div class="form-group">
-          <label for="pswd">Contraseña</label>
+          <label for="pswd" class="required">Contraseña</label>
           <input type="password" id="pswd" />
         </div>
-        <div class="form-group">
-          <input type="checkbox" id="remember-me" />
-          <label for="remember-me">Recordar</label>
+        <div>
+          <label for="remember-me">
+            <input type="checkbox" id="remember-me" />
+            Recordar
+          </label>
+          <span>¿Olvidaste tu contraseña?</span>
         </div>
-        <span>¿Olvidaste tu contraseña?</span>
-        <button>Continuar</button>
+        <button class="btn btn-block">Continuar</button>
       </form>
       <span>También puedes iniciar sesión con</span>
       <div>Gmail</div>
