--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,6 +1,6 @@
-<div class="center auth">
+<div class="auth">
   <svg
-    class="bg-circles"
+    class="w-100 h-100 bg-circles"
     viewBox="0 0 960 540"
     width="100%"
     height="100%"
@@ -37,43 +37,46 @@
       fill="url(#837c3e70-6c3a-44e6-8854-cc48c737b659)"
     ></rect>
   </svg>
-  <div class="auth-container">
-    <div class="center auth-title">
-      <img
-        src="../../../assets/img/angular-logo.png"
-        alt="Angular utilities"
-        width="70"
-      />
-      <h1>Utilidades</h1>
-    </div>
-    <div class="auth-form">
-      <h2 class="text-center">Hola, bienvenido de nuevo</h2>
-      <p>
-        Usa el correo <b>admin@utils.com</b> y la contraseña <b>root</b> para
-        continuar.
-      </p>
-      <form>
-        <div class="form-group">
-          <label for="email" class="required">Correo electrónico</label>
-          <input type="email" id="email" />
-        </div>
-        <div class="form-group">
-          <label for="pswd" class="required">Contraseña</label>
-          <input type="password" id="pswd" />
-        </div>
-        <div>
-          <label for="remember-me">
-            <input type="checkbox" id="remember-me" />
-            Recordar
-          </label>
-          <span>¿Olvidaste tu contraseña?</span>
-        </div>
-        <button class="btn btn-block">Continuar</button>
-      </form>
-      <span>También puedes iniciar sesión con</span>
-      <div>Gmail</div>
-      <div>Facebook</div>
-      <div>Twitter</div>
+  <div class="d-center w-100 h-100 auth-wrap">
+    <div>
+      <div class="d-center auth-title">
+        <img
+          src="../../../assets/img/angular-logo.png"
+          alt="Angular utilities"
+        />
+        <h1>Utilidades</h1>
+      </div>
+      <div class="auth-form">
+        <h2 class="text-center">Hola, bienvenido de nuevo</h2>
+        <p>
+          Usa el correo <b>admin@utils.com</b> y la contraseña <b>root</b> para
+          continuar.
+        </p>
+        <form>
+          <div class="form-group">
+            <label for="email" class="f-label required"
+              >Correo electrónico</label
+            >
+            <input type="email" id="email" class="f-control" />
+          </div>
+          <div class="form-group">
+            <label for="pswd" class="f-label required">Contraseña</label>
+            <input type="password" id="pswd" class="f-control" />
+          </div>
+          <div class="d-between remember">
+            <label for="f-label remember-me">
+              <input type="checkbox" id="remember-me" />
+              Recordar
+            </label>
+            <a href="/">¿Olvidaste tu contraseña?</a>
+          </div>
+          <button class="btn btn-block">Continuar</button>
+        </form>
+        <span>También puedes iniciar sesión con</span>
+        <div>Gmail</div>
+        <div>Facebook</div>
+        <div>Twitter</div>
+      </div>
     </div>
   </div>
 </div>
