--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,17 +2,37 @@
   box-sizing: border-box;
 }
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Poppins, Helvetica, "sans-serif"; }
-
-h1, h2, h3, h4, h5, h6 {
+html,
+body {
+  min-height: 100vh;
+}
+body {
   margin: 0;
+  width: 100vw;
+  font-family: Poppins, Helvetica, 'sans-serif';
+  overflow-x: hidden;
 }
 
-.center {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+}
+.d-center,
+.d-between {
   display: flex;
   align-items: center;
+}
+
+.d-center {
   justify-content: center;
+}
+
+.d-between {
+  justify-content: space-between;
 }
 
 .text-center {
@@ -21,33 +41,41 @@ h1, h2, h3, h4, h5, h6 {
 
 .form-group {
   margin-bottom: 1rem;
+}
 
-  label {
-    display: inline-block;
-    margin-bottom: .3rem;
-    font-size: .95rem;
+.w-100 {
+  width: 100%;
+}
 
-    &.required::after {
-      content: "*";
-      color: red;
-      margin-left: .3rem;
-    }
+.h-100 {
+  height: 100%;
+}
+
+f.label {
+  display: inline-block;
+  margin-bottom: 0.3rem;
+  font-size: 0.95rem;
+
+  &.required::after {
+    content: '*';
+    color: red;
+    margin-left: 0.3rem;
   }
+}
 
-  input {
-    display: block;
-    width: 100%;
-    padding: 0.825rem 1.3rem;
-    border: 1px solid #ccc;
-    border-radius: 0.425rem;
-    box-sizing: border-box;
-    font-weight: 500;
-    font-size: 1rem;
+.f-control {
+  display: block;
+  width: 100%;
+  padding: 0.825rem 1.3rem;
+  border: 1px solid #ccc;
+  border-radius: 0.425rem;
+  box-sizing: border-box;
+  font-weight: 500;
+  font-size: 1rem;
 
-    &:active,
-    &:focus {
-      outline: none;
-    }
+  &:active,
+  &:focus {
+    outline: none;
   }
 }
 
