add social buttons

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -72,10 +72,21 @@
           </div>
           <button class="btn btn-block">Continuar</button>
         </form>
-        <span>También puedes iniciar sesión con</span>
-        <div>Gmail</div>
-        <div>Facebook</div>
-        <div>Twitter</div>
+        <span class="social-signin-text">También puedes</span>
+        <ul class="social-buttons">
+          <li>
+            <img src="../../../assets/img/google.png" alt="Google" />
+            <span>Continuar con Google</span>
+          </li>
+          <li>
+            <img src="../../../assets/img/facebook.png" alt="Facebook" />
+            <span>Continuar con Facebook</span>
+          </li>
+          <li>
+            <img src="../../../assets/img/twitter.png" alt="Twitter" />
+            <span>Continuar con Twitter</span>
+          </li>
+        </ul>
       </div>
     </div>
   </div>
