add palette colors

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -64,7 +64,7 @@
             <input type="password" id="pswd" class="f-control" />
           </div>
           <div class="d-between remember">
-            <label for="f-label remember-me">
+            <label class="f-label" for="remember-me">
               <input type="checkbox" id="remember-me" />
               Recordar
             </label>
