--- a/src/app/auth/login/login.component.scss
+++ b/src/app/auth/login/login.component.scss
@@ -1,4 +1,5 @@
 @import 'vars';
+@import 'mq';
 
 .auth {
   background: $gray-800;
@@ -37,7 +38,7 @@
   h1 {
     color: #fff;
     font-weight: 500;
-    font-size: 1.5rem;
+    font-size: 1.8rem;
     margin-left: 1rem;
     letter-spacing: 1px;
   }
@@ -46,11 +47,16 @@
 .auth-form {
   background-color: #fff;
   border-radius: 0.375rem;
-  padding: 2rem 1rem;
+  padding: 2rem;
+
+  @include mq(lg) {
+    padding: 3rem;
+    max-width: 500px;
+  }
 
   h2 {
     font-weight: 500;
-    font-size: 1.2rem;
+    font-size: 1.35rem;
   }
 
   p {
