change to css vars

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -60,9 +60,9 @@
           #f="ngForm"
         >
           <div class="form-group">
-            <label for="email" class="f-label required">
-              Correo electrónico
-            </label>
+            <label for="email" class="f-label required"
+              >Correo electrónico</label
+            >
             <input
               type="email"
               id="email"
@@ -97,7 +97,7 @@
           </div>
           <button type="submit" class="btn btn-block">Continuar</button>
         </form>
-        <span class="social-signin-text">También puedes</span>
+        <span class="social-signin-text">O</span>
         <ul class="social-buttons">
           <li>
             <img src="../../../assets/img/google.png" alt="Google" />
