add button variations

--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -98,20 +98,20 @@
           <button type="submit" class="btn btn-block">Continuar</button>
         </form>
         <span class="social-signin-text">O</span>
-        <ul class="social-buttons">
-          <li>
+        <div class="social-buttons">
+          <button class="btn-light btn-block">
             <img src="../../../assets/img/google.png" alt="Google" />
-            <span>Continuar con Google</span>
-          </li>
-          <li>
+            Continuar con Google
+          </button>
+          <button class="btn-light btn-block">
             <img src="../../../assets/img/facebook.png" alt="Facebook" />
-            <span>Continuar con Facebook</span>
-          </li>
-          <li>
+            Continuar con Facebook
+          </button>
+          <button class="btn-light btn-block btn-block">
             <img src="../../../assets/img/twitter.png" alt="Twitter" />
-            <span>Continuar con Twitter</span>
-          </li>
-        </ul>
+            Continuar con Twitter
+          </button>
+        </div>
       </div>
     </div>
   </div>
